--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,55 +28,53 @@
             </button>
 
             <div class="col-lg-9 collapse navbar-collapse p-lg-0" id="navbarSupportedContent">
-                <div class="col-12 nav-wrap d-flex flex-wrap p-0">
-                    <ul class="col-lg-8 navbar-nav mt-sm-0 py-3 py-lg-0 px-0 justify-content-center">
-                        <div class="row flex-column flex-lg-row text-center justify-content-center align-items-center">
+                <ul class="col-lg-8 navbar-nav mt-sm-0 py-3 py-lg-0 px-0 justify-content-center">
+                    <div class="row flex-column flex-lg-row text-center justify-content-center">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('homepage') }}">ACCUEIL</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('observation') }}">OBSERVATIONS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('oiseaux') }}">OISEAUX</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('actualites') }}">ACTUALITÉS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('aPropos') }}">A PROPOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('contact') }}">CONTACT</a>
+                        </li>
+                        {% if is_granted('ROLE_ADMIN') %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('homepage') }}">ACCUEIL</a>
+                                <a class="nav-link" href="{{ path('admin') }}">ADMINISTRATION</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ path('observation') }}">OBSERVATIONS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ path('oiseaux') }}">OISEAUX</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ path('actualites') }}">ACTUALITÉS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ path('aPropos') }}">A PROPOS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ path('contact') }}">CONTACT</a>
-                            </li>
-                            {% if is_granted('ROLE_ADMIN') %}
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{{ path('admin') }}">ADMINISTRATION</a>
-                                </li>
-                            {% endif %}
-                        </div>
-                    </ul>
+                        {% endif %}
+                    </div>
+                </ul>
 
 
-                    {% if is_granted('ROLE_USER') %}
-                        <div class="mx-auto col-12 col-lg-4 d-flex flex-column flex-lg-row justify-content-lg-end pb-5 pb-lg-0">
-                            <a class="mx-auto my-2 mx-lg-0 nav-link" href="{{ path('profile') }}">PROFIL</a>
-                            <a class="mx-auto my-2 mx-lg-0 nav-link btn btn-outline" href="{{ path('security_logout') }}">DÉCONNEXION</a>
-                        </div>
+                {% if is_granted('ROLE_USER') %}
+                    <div class="mx-auto col-12 col-lg-4 d-flex flex-column flex-lg-row justify-content-lg-end pb-5 pb-lg-0">
+                        <a class="mx-auto my-2 mx-lg-0 nav-link" href="{{ path('profile') }}">PROFIL</a>
+                        <a class="mx-auto my-2 mx-lg-0 nav-link btn btn-outline" href="{{ path('security_logout') }}">DÉCONNEXION</a>
+                    </div>
 
-                    {% else %}
-                        <div class="mx-auto col-12 col-lg-4 d-flex flex-column flex-lg-row justify-content-lg-end pb-5 pb-lg-0">
-                            <a class="mx-auto my-2 btn btn-outline mx-lg-1" href="{{ path('security_login') }}">CONNEXION</a>
-                            <a class="mx-auto my-2 btn btn-primary mx-lg-1" href="{{ path('user_register') }}">INSCRIPTION</a>
-                        </div>
-                    {% endif %}
-                </div>
+                {% else %}
+                    <div class="mx-auto col-12 col-lg-4 d-flex flex-column flex-lg-row justify-content-lg-end pb-5 pb-lg-0">
+                        <a class="mx-auto my-2 btn btn-outline mx-lg-1" href="{{ path('security_login') }}">CONNEXION</a>
+                        <a class="mx-auto my-2 btn btn-primary mx-lg-1" href="{{ path('user_register') }}">INSCRIPTION</a>
+                    </div>
+                {% endif %}
             </div>
 
 
             <div class="col-12 navbar-svg d-flex flex-column align-items-center px-0 straight">
                 <svg preserveAspectRatio="none" width="100%" height="80px" viewBox="0 0 375 59" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <desc>Ailes vers le bas</desc>
+                    <desc>Aile</desc>
                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                         <path d="M375,0 L375,57.875 C329.3125,33.25625 262.475,17.73125 188.0125,17.73125 C113.3,17.73125 46.2625,33.3625 0.56875,58.125 C0.375,58.225 0.1875,58.33125 0,58.43125 L0,0 L375,0 Z" fill="#FFFEF9"></path>
                         <path d="M375,57.875 C329.3125,33.25625 262.475,17.73125 188.0125,17.73125 C113.3,17.73125 46.2625,33.3625 0.56875,58.125 C0.375,58.225 0.1875,58.33125 0,58.43125 C0.1125,58.325 0.23125,58.225 0.34375,58.125 C29.525,31.7 79.99375,12.0875 140.03125,5.1875 C143.575,4.78125 147.15625,4.41875 150.76875,4.1 C153.175,3.89375 155.59375,3.7 158.025,3.53125 C160.4625,3.35625 162.90625,3.20625 165.3625,3.08125 C170.28125,2.81875 175.25,2.65 180.25625,2.5625 C182.7625,2.51875 185.28125,2.49375 187.80625,2.49375 C188.225,2.49375 188.64375,2.49375 189.0625,2.5 C268.9375,2.725 338.4625,25 375,57.875" fill="#E7E7E7"></path>
@@ -85,10 +83,14 @@
                 <img class="navbar-logo" src="{{ asset('img/logo.svg') }}" alt="NAO_LOGO">
             </div>   
 
+
+
+
+
             {# POUR TRANSFORMATION #}
             <div class="col-12 navbar-svg d-flex flex-column align-items-center px-0 flipped hidden-svg">
                 <svg preserveAspectRatio="none" version="1.1" width="100%" height="80px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="420 263 1440 76" style="enable-background:new 420 263 1440 76;" xml:space="preserve">
-                    <desc>Ailes vers le haut</desc>
+                    
                     <path class="st0" d="M1859.8,263.8c-140.3,44.4-407.2,74.5-713.9,74.8c-1.6,0-3.2,0-4.8,0c-9.7,0-19.4,0-29-0.1
                     c-19.2-0.1-38.3-0.4-57.2-0.7c-9.4-0.2-18.8-0.4-28.2-0.6c-9.3-0.2-18.6-0.5-27.9-0.8c-13.9-0.4-27.6-0.9-41.2-1.5
                     c-229.8-9.3-423-35.6-535.2-71.2H1859.8z" fill="#FFFEF9"/>
