--- a/web/css/home.css
+++ b/web/css/home.css
@@ -8,7 +8,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: -100px;
+  margin-bottom: -200px;
+  margin-top: -80px;
 }
 
 #explication {
@@ -35,7 +36,7 @@
 }
 
 .home-heading {
-    margin-bottom: 50px;
+    margin-bottom: 80px;
 }
 .home-title {
   color: var(--egg-shell);
