--- a/app/Resources/views/main/observation.html.twig
+++ b/app/Resources/views/main/observation.html.twig
@@ -47,23 +47,36 @@
                 <p class="text-center"><strong>Saisir une observation</strong></p>
 
                 {{ form_start(formObservation) }}
-                {{ form_row(formObservation.observedAt, {'attr' : {
-                    'placeholder' : "Jour de l'observation"
+                {{ form_row(formObservation.lieuObservation, {"attr" : {
+                    'placeholder' : "Lieu de l'observation"
                     }
                 }) }}
-                {{ form_row(formObservation.qtyBirds, {'attr' : {
-                    'placeholder' : "Nombre d'oiseaux observés"
-                    }
-                }) }}
-                {{ form_row(formObservation.description, {'attr' : {
-                    'placeholder' : "Ajouter une observation"
-                    }
-                }) }}
+                <div class="row">
+                    <div class="col">
+                        {{ form_row(formObservation.imageFile) }}
+                    </div>
+                    <div class="col">
+                        {{ form_row(formObservation.qtyBirds, {'attr' : {
+                            'placeholder' : "Nombre d'oiseaux observés"
+                        }
+                        }) }}
+                        {{ form_row(formObservation.observedAt, {'attr' : {
+                            'placeholder' : "Jour de l'observation"
+                        }
+                        }) }}
+                    </div>
+                </div>
+
+
                 {{ form_row(formObservation.bird, {'attr' : {
                     'placeholder' : "Ajouter le nom de l'espèce"
                     }
                 }) }}
-                {{ form_row(formObservation.imageFile) }}
+                {{ form_row(formObservation.description, {'attr' : {
+                    'placeholder' : "Description libre"
+                    }
+                }) }}
+
                 <button type="submit" class="btn btn-default">Envoyer</button>
                 {{ form_end(formObservation) }}
 
@@ -89,6 +102,10 @@
             </div>
         </div>
 
+        <div id="dialog" title="Selectionnez le lieu de votre observation" style="display: none">
+            <div id="map"></div>
+        </div>
+
 
     </div>
 
@@ -97,6 +114,9 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM-LWXFSraqzHfltfjrg0aIgHYdDp9EpI">
+    </script>
     <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
     <script src="{{ asset('js/observation.js') }}"></script>
     <script src="{{ asset('js/datepicker.js') }}"></script>
