--- a/app/Resources/views/main/profile.html.twig
+++ b/app/Resources/views/main/profile.html.twig
@@ -142,7 +142,7 @@
 	                            <div class="p-2 nao-card mx-auto">
                                 	<div class="d-flex flex-nowrap">
                                         <div class="bird-img-wrapper">
-                                            <img src="{{ userObservation.picture }}"
+                                            <img src="{{ userObservation.user.profilePicture }}"
                                                  alt="prise par {{ userObservation.user.username }}"
                                                  class="bird-img">
                                         </div>
@@ -266,7 +266,7 @@
 	                        <div class="p-2 nao-card mx-auto">
 	                        	<div class="d-flex flex-nowrap">
 	                                <div class="bird-img-wrapper">
-	                                    <img src="{{ waitingObservation.picture }}"
+	                                    <img src="{{ waitingObservation.image }}"
 	                                         alt="prise par {{ waitingObservation.user.username }}"
 	                                         class="bird-img">
 	                                </div>
@@ -314,7 +314,7 @@
 
                                     <div class="modal-body py-0 mb-5">
                                         <div class="flex-wrap media align-items-center justify-content-center">
-                                            <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{ waitingObservation.bird.picture }}" alt="image {{ waitingObservation.bird.name }}">
+                                            <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{ waitingObservation.bird.image }}" alt="image {{ waitingObservation.bird.name }}">
                                             <div class="media-body col-12 col-md-8 p-0">
                                                 <h3 class="mt-5 mt-md-0 text-center text-md-left">DESCRIPTION</h3>
                                                 <p class="text-justify">{{ waitingObservation.bird.description }}</p>
